--- a/assets/ReportHTMLTemplate/index.html
+++ b/assets/ReportHTMLTemplate/index.html
@@ -637,11 +637,21 @@
         function setupNavigation() {
           const showTab = (id) => document.querySelector('.nav-link#' + id).classList.add('visible');
 
+          const existCopyright = (componentList) => {
+            for (const component of componentList) {
+              for(const version of component.versions) {
+                if (version?.copyrights) return true;
+              }
+            }
+            return false;
+          };
+
+
           if (data.licenses) showTab('nav-licenses-tab');
           if (data.component) showTab('nav-components-tab');
           if (data.dependencies) showTab('nav-dependencies-tab');
           if (data.vulnerabilities) showTab('nav-vulnerabilities-tab');
-          if (data.component) showTab('nav-copyrights-tab');
+          if (existCopyright(data.component)) showTab('nav-copyrights-tab');
         }
 
         function renderHeader() {
@@ -917,10 +927,11 @@
 
           for (const compData of componentData) {
               for (const version of compData.versions) {
-              const clon = template.content.cloneNode(true);
-              clon.querySelector('td:nth-child(1)').innerHTML = compData.name;
-              clon.querySelector('td:nth-child(2)').innerHTML = version.version;
-              clon.querySelector('td:nth-child(3)').innerHTML = version.copyrights?.map(item => item.name).join(' - ');
+                if (!version.copyrights) continue
+                const clon = template.content.cloneNode(true);
+                clon.querySelector('td:nth-child(1)').innerHTML = compData.name;
+                clon.querySelector('td:nth-child(2)').innerHTML = version.version;
+                clon.querySelector('td:nth-child(3)').innerHTML = version.copyrights?.map(item => item.name).join(' - ');
 
               table.appendChild(clon);
             }
