chore:SP-2378 Renames cryptography column table on HTML report

--- a/assets/ReportHTMLTemplate/index.html
+++ b/assets/ReportHTMLTemplate/index.html
@@ -677,7 +677,7 @@
                   <tr>
                     <th>Component</th>
                     <th>Type</th>
-                    <th>Cryptography</th>
+                    <th>Detected</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -698,7 +698,7 @@
               <tr>
                 <th>File</th>
                 <th>Type</th>
-                <th>Cryptography</th>
+                <th>Detected</th>
               </tr>
               </thead>
               <tbody>
